# dashboard

./: .gitignore  DEPLOYMENT_SAFETY_SUMMARY.md  DEPLOYMENT_STATUS.md  EVENT_INSURANCE_APPS_SUMMARY.md  FAQ_SCHEMA_IMPLEMENTATION_REPORT.md  IMPLEMENTATION-SUMMARY.md  META_DESCRIPTION_OPTIMIZATION_REPORT.md  META_OPTIMIZATION_README.md  OG-IMAGES-README.md  OPTIMIZATION_EXAMPLES.md  OPTIMIZATION_SUMMARY.md  POST_OPTIMIZATION_CHECKLIST.md  QUICK_REFERENCE.md  RELOCATION_QUEST_AUDIT_2025.md  SITEMAP_GENERATION_GUIDE.md  add-faq-schema.ts  add-og-images-test.js  add-og-images.js  create-og-images.js  create-placeholder-images.sh  final-report.js  generate-sitemaps.js  optimize-meta-descriptions.js  package.json  pnpm-lock.yaml  sitemap-generation-report.md  tsconfig.json  turbo.json  vercel.json  verify-og-images.js
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/src/: agents.py  main.py  memory.py  schemas.py  zep.py
apps/better-off-calculator/: package.json  vercel.json
apps/bonus-calculator/: package.json  vercel.json
apps/chief-of-staff/: package-lock.json  package.json  vercel.json
apps/childcare-calculator/: package.json  vercel.json
apps/craft-fair/: package.json  tailwind.config.ts
apps/dashboard/: .env.example  next.config.ts  package.json  tailwind.config.ts  vercel.json
apps/drawdown-calculator/: package.json  vercel.json
apps/drone-insurance/: SEO-PLAN.md  package.json  tailwind.config.ts
apps/each-way-calculator/: package.json  vercel.json
apps/esports-event/: package.json  tailwind.config.ts
apps/graduated/: package.json
(+690 files in other folders)
